[project]
name = "trip-tracker"
version = "0.1.0"
package-mode = false
description = "Simple tracker to track daily transportation option"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-auth>=2.55.0",
    "gspread>=6.2.1",
    "streamlit>=1.58.0",
]
poetry install --no-root